parser/src/test/resources/corpus/valid/29_distribute_waterfall.ff
rule "Distribute" {
  distribute distributable through waterfall "European Waterfall"
}
