parser/src/test/resources/corpus/invalid/28_distribute_missing_name.ff
rule "Distribute Missing Name" {
  distribute amount through waterfall
}
